fix frozen_string regression from rubocop autofix
Signed-off-by: Thore Boedecker <me@foxxx0.de>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,7 @@ AllCops:
   TargetRubyVersion: 2.3
   Include:
     - ./**/*.rb
+    - '**/Rakefile'
   Exclude:
     - vendor/**/*
     - .vendor/**/*
@@ -40,6 +41,9 @@ Style/HashSyntax:
 
 Style/RedundantReturn:
   Enabled: true
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
 
 Lint/AmbiguousOperator:
   Enabled: true
