--- a/config/appconfig.example.yml
+++ b/config/appconfig.example.yml
@@ -1,13 +1,27 @@
 development:
+  :site_title: 'vhost-API'
   :session:
-    :timeout: 60
+    :timeout: 2592000 # 30 days
     :domain: localhost
     :key: rack.session
     :path: /
+  :mail_home: 'testdata/vmail'
+  :sieve_file: 'dovecot.sieve'
+  :threshholds:
+    :display:
+      :mailquota_warn: 65
+      :mailquota_crit: 90
 
 production:
+  :site_title: 'vhost-API'
   :session:
     :timeout: 900
     :domain: example.com
     :key: rack.session
     :path: /
+  :mail_home: '/var/vmail'
+  :sieve_file: 'dovecot.sieve'
+  :threshholds:
+    :display:
+      :mailquota_warn: 65
+      :mailquota_crit: 90
