--- a/config/database.example.yml
+++ b/config/database.example.yml
@@ -1,14 +1,14 @@
 development:
-  db_adapter: mysql
-  db_host: db.foobar.com
-  db_user: foo
-  db_pass: bar
-  db_name: vhost-api
+  :db_adapter: mysql
+  :db_host: localhost
+  :db_user: foo
+  :db_pass: bar
+  :db_name: vhost_api
 
 production:
-  db_adapter: postgres
-  db_encoding: unicode
-  db_host: db.foobar.com
-  db_user: foo
-  db_pass: bar
-  db_name: vhost-api
+  :db_adapter: postgres
+  :db_encoding: unicode
+  :db_host: db.example.com
+  :db_user: foo
+  :db_pass: bar
+  :db_name: vhost_api
