add first unit tests for User model
Ref T20

Signed-off-by: Thore Boedecker <me@foxxx0.de>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,7 @@ AllCops:
     - ./**/*.rb
     - '**/Rakefile'
     - '**/Gemfile'
+    - '**/Guardfile'
   Exclude:
     - vendor/**/*
     - .vendor/**/*
