restructure lapyout, move stuff to ./app/
Fix T30

Signed-off-by: Thore Boedecker <me@foxxx0.de>

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ coverage.vim
 # project-specific files
 config/database.yml
 config/appconfig.yml
+config/puma.rb
 config/session.secret
 
 coverage/**
